tests/specs/function_generator.txt
# mod.ts
export function* g() {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function* g() {}
  | ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:1:1
  | 
1 | export function* g() {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function* g()


# output.json
[
  {
    "kind": "function",
    "name": "g",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [],
      "returnType": null,
      "hasBody": true,
      "isAsync": false,
      "isGenerator": true,
      "typeParams": []
    }
  }
]
